--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <div class="button-group filters-button-group">
-                            <div class="button is-checked" data-filter="*">All</div>
-                            <div class="button" data-filter=".post">Post</div>
-                            <div class="button" data-filter=".image">Image</div>
-                            <div class="button" data-filter=".video">Video</div>
-                            <div class="button" data-filter=".extern">Extern</div>                                
+                            <div class="button is-checked" data-filter="*">1</div>
+                            <div class="button" data-filter=".post">2</div>
+                            <div class="button" data-filter=".image">3</div>
+                            <div class="button" data-filter=".video">4</div>
+                            <div class="button" data-filter=".extern">5</div>                                
                         </div>
                         <div class="grid" id="portfolio">
                             <div class="grid-sizer"></div>
