--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="images/ajax-document-loader.gif" alt="Loading...">                    
+                        <img src="images/Untitled-1.png" alt="Loading...">                    
                     </td>
                 </tr>
             </tbody>
